<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.shanlin.creadit.ui.activity.PersonalActivity">

    <include layout="@layout/layout_title" />
    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                style="@style/Style_Personal_Small_Title"
                android:text="@string/personal_person_message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_nickname" />

                <TextView style="@style/Style_Personal_content_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_name" />

                <TextView style="@style/Style_Personal_content_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_identity" />

                <TextView style="@style/Style_Personal_content_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_phone" />

                <TextView style="@style/Style_Personal_content_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_email" />

                <TextView style="@style/Style_Personal_content_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_sex" />

                <TextView style="@style/Style_Personal_content_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_education" />

                <LinearLayout style="@style/Style_Personal_content_text">

                    <TextView style="@style/Style_Personal_select_text" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_marital" />

                <LinearLayout style="@style/Style_Personal_content_text">

                    <TextView style="@style/Style_Personal_select_text" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_address" />

                <LinearLayout style="@style/Style_Personal_content_text">

                    <TextView style="@style/Style_Personal_select_text" />
                    <TextView style="@style/Style_Personal_select_text" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/Style_Personal_Small_Title"
                android:text="@string/personal_work_message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_address" />

                <LinearLayout style="@style/Style_Personal_content_text">

                    <TextView style="@style/Style_Personal_select_text" />
                    <TextView style="@style/Style_Personal_select_text" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_address" />

                <LinearLayout style="@style/Style_Personal_content_text">

                    <TextView style="@style/Style_Personal_select_text" />
                    <TextView style="@style/Style_Personal_select_text" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_address" />

                <LinearLayout style="@style/Style_Personal_content_text">

                    <TextView style="@style/Style_Personal_select_text"
                        android:layout_weight="1.5"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_item_height">

                <TextView
                    style="@style/Style_Personal_note_text"
                    android:text="@string/personal_tv_address" />

                <LinearLayout style="@style/Style_Personal_content_text">

                    <TextView style="@style/Style_Personal_select_text"
                        android:layout_weight="1.5"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>

</LinearLayout>
